--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -153,7 +153,7 @@
 }
 
 .tiptap blockquote {
-  @apply mx-0 my-[1.5rem] border-l-4 border-l-gray-600 pl-4;
+  @apply mx-0 my-[1.5rem] border-l-4 border-l-gray-600 pl-4 bg-gray-50
 }
 
 .tiptap ul {
