--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -189,13 +189,13 @@
   }
 
   h1 {
-    @apply my-4 text-3xl font-bold;
+    @apply my-4 text-2xl md:text-3xl font-bold;
   }
   h2 {
-    @apply my-3 font-bold text-2xl
+    @apply my-3 font-bold text-xl md:text-2xl
   }
   h3 {
-    @apply my-2 font-bold text-xl;
+    @apply my-2 font-bold text-lg md:text-xl;
   }
   a {
     @apply !cursor-pointer !font-semibold underline
